REGRESSION(r112177): listStyleType CSS property gets converted into listStyle https://bugs.webkit.org/show_bug.cgi?id=83026

Reviewed by Darin Adler.

Source/WebCore:

Fixed the bug by not using shorthand notations when some values are missing.

However, we still want to return a value when shorthand border property is explicitly
requested so extract borderPropertyValue with a flag to support both behaviors.

* css/StylePropertySet.cpp:
(WebCore::borderPropertyValue): Extracted from getPropertyValue.
(WebCore::StylePropertySet::getPropertyValue):
(WebCore::StylePropertySet::get4Values): Don't return values when priority don't match.
(WebCore::StylePropertySet::getShorthandValue):
(WebCore::StylePropertySet::getCommonValue): Don't return null string for initial values
to disambiguate missing values and "initial" in getPropertyValue. Also check propriety.
(WebCore::StylePropertySet::asText): Support emitting border-width, border-style, and
border-color when border doesn't work but the former properties do.

LayoutTests:

Added test cases to cssText-shorthand.html and rebaselined some tests.

* fast/css/cssText-shorthand-expected.txt:
* fast/css/cssText-shorthand.html: Added more test cases.
* fast/css/remove-shorthand-expected.txt: Correctly adds both border-width and border-style
when border-color is missing.
* printing/page-rule-css-text-expected.txt: Correctly uses border-width instead of border.


Canonical link: https://commits.webkit.org/102379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115227 268f45cc-cd09-0410-ab3c-d52691b4dbfc